manifests/applications/immich/requirements/redis-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-redis-master
  namespace: immich
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: master
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: redis
  serviceName: immich-redis-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/component: master
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: redis
    spec:
      automountServiceAccountToken: false
      containers:
      - command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        image: redis:7.4.10
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
        resources:
          limits:
            cpu: 150m
            ephemeral-storage: 2Gi
            memory: 192Mi
          requests:
            cpu: 100m
            ephemeral-storage: 50Mi
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: redis-data
        - mountPath: /etc/redis
          name: redis-config
        - mountPath: /etc/redis/master.conf
          name: redis-config
          subPath: master.conf
        - mountPath: /etc/redis/replica.conf
          name: redis-config
          subPath: replica.conf
        - mountPath: /etc/redis/redis.conf
          name: redis-config
          subPath: redis.conf
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
      # serviceAccount: immich-redis-master
      # serviceAccountName: immich-redis-master
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: redis-config
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: master
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: redis
      name: redis-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
      volumeMode: Filesystem
