manifests/applications/immich/requirements/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis-master
  namespace: immich
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-redis
    port: 6379
    protocol: TCP
    targetPort: redis
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: redis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
